# freecat

./: .gitignore  Incat.hs  README.md  build-docs.sh  cabal.sandbox.config  freecat.cabal  incat.cabal  test.sh
doc/design-doc/: design-doc.tex
lib/: Prelude.fcat
src/: FreeCat.hs  Incat.hs  Lexer.hs  Main.hs  Parser.hs
src/FreeCat/: Core.hs  Digest.hs  Evaluate.hs  Lexer.hs  Parser.hs
test/cases/01-list/: context.fcat  context.incat  equations
test/cases/02-list-implicit/: context.fcat
test/cases/03-list-partially-implicit/: context.fcat  equations
