name:                freecat
version:             0.1.0.0
synopsis:            A programming language based on the principles of freedom and category theory.
-- description:
homepage:            https://github.com/morganthomas/freecat/
license:             Apache-2.0
license-file:        LICENSE
author:              Morgan Thomas
maintainer:          morgan.a.s.thomas@gmail.com
-- copyright:
category:            Language
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable freecat
  main-is:             Main.hs
  -- other-modules:
  -- other-extensions:
  build-depends:       base >=4.8 && <4.9,
                       containers >=0.5 && <0.6,
                       transformers >=0.4.2.0,
                       parsec >=3.1.11
  hs-source-dirs:      src
  default-language:    Haskell2010
